--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "my-app",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://agnyathavasi.github.io/e-commerce-page",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.8.4",
